# chat_to_map_desktop

./: .env.example  .gitignore  .jscpd.json  CREDITS.md  README.md  Taskfile.yml  biome.json  clippy.toml  knip.json  lefthook.yml  package.json  rustfmt.toml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: wait-for-checks.js
.github/workflows/: ci.yml  release.yml
scripts/: check_file_length.sh  check_openapi_sync.sh  update_schemas.sh
src/: analytics.ts  debug.ts  env.d.ts  index.html  main.test.ts  main.ts  screenshot.ts  styles.css  types.ts
src-tauri/: Cargo.toml  build.rs  openapi.json  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/fixtures/schemas/: addressbook_26.0.1.sql  imessage_26.0.1.sql
src-tauri/icons/: icon.icns
src-tauri/scripts/: update-schemas.sh
src-tauri/src/: api.rs  cli.rs  contacts.rs  contacts_tests.rs  debug_commands.rs  export.rs  lib.rs  main.rs  screenshot.rs  upload.rs
src-tauri/src/test_fixtures/: addressbook.rs  addressbook_schema.sql  imessage.rs  imessage_schema.sql  mod.rs
src-tauri/src/test_fixtures/schemas/: addressbook_26.0.1.sql  imessage_26.0.1.sql
