[package]
name = "chat-to-map-desktop"
version = "0.1.0"
description = "ChatToMap Desktop - iMessage export utility"
authors = ["DocSpring"]
license = "GPL-3.0"
repository = "https://github.com/DocSpring/chat_to_map_desktop"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [], optional = true }
tauri-plugin-shell = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }

# iMessage database access - the core functionality
imessage-database = "3"
rusqlite = "0.37"

[lib]
name = "chat_to_map_desktop"
path = "src/lib.rs"

[[bin]]
name = "chat-to-map-desktop"
path = "src/main.rs"
required-features = ["desktop"]

[[bin]]
name = "ctm-cli"
path = "src/cli.rs"

[features]
default = ["desktop"]
desktop = ["tauri", "tauri-plugin-shell", "tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
