[package]
name = "chat-to-map-desktop"
version = "0.1.0"
description = "ChatToMap Desktop - iMessage export utility"
authors = ["DocSpring"]
license = "GPL-3.0"
repository = "https://github.com/DocSpring/chat_to_map_desktop"
edition = "2021"
rust-version = "1.70"
default-run = "chat-to-map-desktop"

[build-dependencies]
tauri-build = { version = "2", features = [] }
progenitor = "0.9"
openapiv3 = "2"
serde_json = "1"
syn = "2"
prettyplease = "0.2"

[dependencies]
tauri = { version = "2", features = [], optional = true }
tauri-plugin-shell = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }

# iMessage database access - the core functionality
imessage-database = "3"
rusqlite = "0.37"

# Export functionality
zip = "2"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
reqwest = { version = "0.12", features = ["json", "multipart"] }
progenitor-client = "0.9"
uuid = { version = "1", features = ["v4"] }
open = "5"

# Screenshot functionality (for testing/documentation)
xcap = "0.8"
image = "0.25"

[lib]
name = "chat_to_map_desktop"
path = "src/lib.rs"

[[bin]]
name = "chat-to-map-desktop"
path = "src/main.rs"
required-features = ["desktop"]

[[bin]]
name = "ctm-cli"
path = "src/cli.rs"

[features]
default = ["desktop"]
desktop = ["tauri", "tauri-plugin-shell", "tauri/custom-protocol"]
# Use local dev server instead of production
dev-server = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
